markdown questions, comments

--- a/dsei2100s23hw4p3-feature-selection.ipynb
+++ b/dsei2100s23hw4p3-feature-selection.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e3e4d1",
+   "id": "c1d05299",
    "metadata": {},
    "source": [
     "## Plotting Function & Printing Function"
@@ -73,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "133b05b8",
+   "execution_count": 2,
+   "id": "3e12e56d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
     "def plot_importance(importance_arr,feature_names,title,ylabel,descending=True):\n",
     "    #figure and axis \n",
     "    fix, ax = plt.subplots()\n",
-    "    #array of indices to sort by absolute value of value in descending order by default \n",
+    "    #array of indices to sort by absolute value in descending order by default \n",
     "    sorted_indices = np.argsort(np.abs(importance_arr))[::-1*(2*descending-1)]\n",
     "    #rank\n",
     "    rank = np.arange(len(feature_names))\n",
@@ -99,16 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "cf534840",
+   "execution_count": 3,
+   "id": "315c46ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "#function for printing the top 5 features\n",
     "def print_top5(importance_arr, feature_names,title,descending=True):\n",
+    "    #array of indices to sort by the abs value in descending order by default \n",
     "    sorted_indices = np.argsort(np.abs(importance_arr))[::-1*(2*descending-1)]\n",
+    "    #round the results in the importance array \n",
     "    importance_arr = np.round(importance_arr,3)\n",
+    "    #print defined title \n",
     "    print(title)\n",
+    "    #print the top 5 features \n",
     "    for i,ind in enumerate(sorted_indices):\n",
     "        print(feature_names[ind]+\" : \"+str(importance_arr[ind]))\n",
     "        if i == 4:\n",
@@ -326,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "6c2289c4-a12c-4fec-b810-c31b12927459",
    "metadata": {},
    "outputs": [
@@ -387,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "fa0b71bf-f413-48c8-833e-21ec48277f27",
    "metadata": {},
    "outputs": [
@@ -449,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "fdb44bb7-c6e1-499e-863b-da7417152b3a",
    "metadata": {},
    "outputs": [
@@ -484,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "f1c92c89-8842-4b38-a3fd-b2413b7459f7",
    "metadata": {},
    "outputs": [
@@ -513,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "f77104ef-bbf1-4788-8b3c-6077937cceb4",
    "metadata": {},
    "outputs": [
@@ -547,19 +551,19 @@
     "\n",
     "Q1: Are there 3 features that are selected in the top 5 by all 4 methods?\n",
     "\n",
-    "A1: Your answer here\n",
+    "A1: Yes.\n",
     "\n",
     "Q2: If so, what are they? / If not, what are the 3 features that are selected by the most methods? \n",
     "\n",
-    "A2: Your answer here\n",
+    "A2:  The features that are selected in the top 5 by all 4 feature selection methods are  S5, bmi, bp, and s6. \n",
     "\n",
     "Q3: How would it be possible that univariate methods might select different features than multivariate methods?\n",
     "\n",
-    "A3: Your answer here\n",
+    "A3: Univariate methods might select different features than multivariate methods due to the difference in how they determine feature importance. Univariate methods will analyze one attribute at a time to determine importance. In contrast, multivariate will consider multiple attributes at the same time to determine importance, thus being able to capture if features together contribute meaningful information to the regression problem.  \n",
     "\n",
     "Q4: How does dependence between features affect the feature selection methods?\n",
     "\n",
-    "Q4: Your answer here"
+    "Q4: Features that are highly dependent on each other will provide similar information to the regression problem, and thus return similar feature imporance in selection methods. For example, from the pairplot analysis, it is observed that s1 and s2 are highly correlated. In the four feature selection methods above, they are always ranked similarly in terms of importance. "
    ]
   },
   {
