--- a/feature_selection_comparison.ipynb
+++ b/feature_selection_comparison.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Description\n",
     "\n",
-    "In this problem we will work with the diabetes dataset from sklearn. This data set is for a regression problem where 10 features are used to predict the progression of diabetes. The dataset is described in more detail [here](https://scikit-learn.org/stable/datasets/toy_dataset.html#diabetes-dataset). We will use multiple techniques of feature selection to try to interpret the strength of the features in the dataset. The following techniques are below: \n",
+    "In this problem we, will work with the diabetes dataset from sklearn. This data set is for a regression problem where 10 features are used to predict the progression of diabetes. The dataset is described in more detail [here](https://scikit-learn.org/stable/datasets/toy_dataset.html#diabetes-dataset). We will use multiple techniques of feature selection to try to interpret the strength of the features in the dataset. The following techniques are below: \n",
     "\n",
     "- Pearson correlation coefficient using r_regression from sklearn (univariate feature selection)\n",
     "- Mutual information using mutual_info_regression from sklearn (univariate feature selection)\n",
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "24211c5d-8831-4401-a941-1ae3c6e33e09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Some imports you will need\n",
+    "# libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.datasets import load_diabetes\n",
